--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
+<!DOCTYPE html>
 <html>
-<head>
+<body>
+
+<h1 style="color:red;">REDRUM</h1>
+
+<p style="color:red;">A redrum</p>
+  
+<h1>R3DRUM</h1>
+
+<p id="demo">THE REDRUM OF REDRUM.</p>
+
+<script>
+function myFunction() {
   document.getElementById("demo").style.fontSize = "25px";
-document.getElementById("demo").style.color = "red";
-document.getElementById("demo").style.backgroundColor = "yellow";
+  document.getElementById("demo").style.color = "red";
+  document.getElementById("demo").style.backgroundColor = "black";
+}
+
+  <h2>HTML Images</h2>
+<p>HTML images are defined with the img tag:</p>
+
+  <img src="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" alt="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" width="246" height="206">
 
   <body>
-    document.getElementById("demo").style.fontSize = "25px";
-document.getElementById("demo").style.color = "red";
-document.getElementById("demo").style.backgroundColor = "yellow";
+    <p>  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM.</p>
