--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@ function myFunction() {
   <h2>HTML Images</h2>
 <p>HTML images are defined with the img tag:</p>
 
-  </body>
-</html>
+  <body>
+<html>
 
-<img src="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" alt="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" width="166" height="206">
+<img src="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" alt="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824">
 
   <h3>
+    <body>
+    <html>
     <p>  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM  REDRUM REDRUM REDRUM REDUM REDRUM REDRUM REDRUM REDRUM REDRUMREDRUM REDRUM REDRUM REDRUM REDRUM.</p>
