--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+  <title>REDRUM Website</title>
+</head>
 
-<h1 style="color:red;">REDRUM</h1>
+<body style="background-color:black; color:red; font-family:Arial;">
 
-<p style="color:red;">A redrum</p>
-  
-<h1>R3DRUM</h1>
+  <h1 style="color:red;">REDRUM</h1>
+  <p>A redrum</p>
 
-<p id="demo">THE REDRUM OF REDRUM.</p>
+  <h1>R3DRUM</h1>
 
-<script>
-function myFunction() {
-  document.getElementById("demo").style.fontSize = "25px";
-  document.getElementById("demo").style.color = "red";
-  document.getElementById("demo").style.backgroundColor = "black";
-}
+  <p id="demo">THE REDRUM OF REDRUM.</p>
 
-  <h2>HTML Images</h2>
-<p>HTML images are defined with the img tag:</p>
+  <!-- Button to activate the function -->
+  <button onclick="myFunction()">Click for REDRUM Effect</button>
 
-  <body>
-<html>
+  <h2>*REDRUM*</h2>
+  <p>redrum redrum</p>
 
-<img src="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" alt="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824">
+  <img 
+    src="https://preview.redd.it/9i6swayri3w31.png?width=1080&crop=smart&auto=webp&s=d124fa4684ba7d12a11ee46244ab24633c9bd824" 
+    alt="Redrum Image"
+    width="300"
+  >
 
-  <p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
+  <h3>REDRUM Chant</h3>
+
+  <p>
+    REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM...
+  </p>
+
+  <script>
+    function myFunction() {
+      document.getElementById("demo").style.fontSize = "25px";
+      document.getElementById("demo").style.color = "red";
+      document.getElementById("demo").style.backgroundColor = "black";
+    }
+  </script>
 
 </body>
 </html>
-
-<p>REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM REDRUM DEADRUM REDRUM.</p>
-<p> All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy. All work and no play makes Jack a dull boy.
